syntax = "proto3";
package musechain.musecore.fungible;

import "gogoproto/gogo.proto";
import "musechain/musecore/pkg/coin/coin.proto";

option go_package = "github.com/RWAs-labs/muse/x/fungible/types";

message ForeignCoins {
  //  string index = 1;
  string mrc20_contract_address = 2; // index
  string asset = 3;
  int64 foreign_chain_id = 4;
  uint32 decimals = 5;
  string name = 6;
  string symbol = 7;
  pkg.coin.CoinType coin_type = 8;
  // Deprecated: value stored in the mrc20 smart contract is used instead
  uint64 gas_limit = 9 [ deprecated = true ];
  bool paused = 10;
  string liquidity_cap = 11 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];
}
